--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,6 @@
   "include": [
     "*.js",
     "libraries/*.js",
-    "c:\\Users\\gabep\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.7.2\\p5types\\global.d.ts"
+    "c:\\Users\\3903282\\.vscode\\extensions\\wmcicompsci.cs30-p5-1.7.2\\p5types\\global.d.ts"
   ]
 }
